# ArUco_3DVision

./: README.md
datasets/: cam_param.txt  sfm_point(cam).xyz  sfm_point(obj).xyz
demo_video/: demo.txt
doc/: ARuco Marker Detection.docx
src/: CMakeLists.txt
src/ARuco_3DRecon/: ARuco_3DRecon.cpp  bundle_adjustment.hpp  config.h  load_images.h  sfm.cpp  sfm.hpp  viewer_3d_point.h
src/ARuco_Calibration/: ARuco_Calibration.cpp
src/ARuco_Detection/: ARuco_Detection.cpp  draw_object.cpp  draw_object.h
